<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_main_page"
        android:icon="@mipmap/ic_tab_home_w"
        android:title="@string/title_main_page" />

    <item
        android:id="@+id/navigation_trend"
        android:icon="@mipmap/ic_tab_trend_w"
        android:title="@string/title_predict_tab" />

    <item
        android:id="@+id/navigation_favorites"
        android:icon="@mipmap/ic_tab_fav_w"
        android:title="@string/title_choices_tab" />

    <item
        android:id="@+id/navigation_post"
        android:icon="@mipmap/ic_tab_post_w"
        android:title="@string/title_discussion" />

    <item android:id="@+id/navigation_profile"
        android:icon="@mipmap/ic_tab_profile_w"
        android:title="@string/title_profile" />

</menu>
