<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="61dp" >

    <ImageView
        android:id="@+id/action_bar_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_arrow_left"
        android:contentDescription="@string/title_go_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/action_bar_title"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:fontFamily="sans-serif"
        android:textStyle="normal"
        android:text="@string/app_name"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/action_bar_back"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ImageView
        android:id="@+id/action_bar_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_fav_off"
        android:contentDescription="@string/title_choices_tab"
        android:layout_marginEnd="18dp"
        app:layout_constraintEnd_toStartOf="@id/action_bar_more"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ImageView
        android:id="@+id/action_bar_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_more"
        android:contentDescription="@string/title_more"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>