<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/marketsense_stock_item_id"
    android:layout_width="match_parent"
    android:layout_height="96dp"
    android:layout_marginBottom="1dp"
    android:background="@drawable/news_layout_border">

    <TextView
        android:id="@+id/marketsense_stock_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="Roboto-Regular"
        android:text="@string/title_company_name"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/marketsense_stock_code_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="Roboto-Regular"
        android:text="@string/title_company_code"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintTop_toTopOf="@id/marketsense_stock_name_tv"
        app:layout_constraintStart_toEndOf="@id/marketsense_stock_name_tv" />

    <TextView
        android:id="@+id/marketsense_stock_price_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="26dp"
        android:fontFamily="Roboto-Regular"
        android:text="@string/title_company_price"
        android:textColor="@color/marketsense_text_black"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="@id/marketsense_stock_name_tv"
        app:layout_constraintTop_toBottomOf="@id/marketsense_stock_name_tv"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/marketsense_stock_diff_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="Roboto-Regular"
        android:text="@string/title_company_price_diff_percentage"
        android:textColor="@color/marketsense_text_black"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintTop_toTopOf="@id/marketsense_stock_price_tv"
        app:layout_constraintStart_toEndOf="@id/marketsense_stock_price_tv" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.55" />

    <TextView
        android:id="@+id/marketsense_stock_people_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@mipmap/ic_arrow_red_s"
        android:drawablePadding="8dp"
        android:layout_marginBottom="13dp"
        android:fontFamily="Roboto-Regular"
        android:text="@string/title_people"
        android:textColor="@color/marketsense_text_black"
        android:textSize="14sp"
        android:textStyle="normal"
        android:letterSpacing="0.04"
        app:layout_constraintStart_toStartOf="@id/guideline_1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/marketsense_stock_news_tv"
        app:layout_constraintVertical_chainStyle="packed"/>

    <TextView
        android:id="@+id/marketsense_stock_news_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@mipmap/ic_arrow_green_s"
        android:drawablePadding="8dp"
        android:fontFamily="Roboto-Regular"
        android:text="@string/title_news"
        android:textColor="@color/marketsense_text_black"
        android:textSize="14sp"
        android:textStyle="normal"
        android:letterSpacing="0.04"
        app:layout_constraintStart_toStartOf="@id/guideline_1"
        app:layout_constraintTop_toBottomOf="@id/marketsense_stock_people_tv"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:id="@+id/marketsense_stock_people_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_bar3_red"
        android:contentDescription="@string/title_company_predict_people_title"
        android:scaleX="0.8"
        app:layout_constraintTop_toTopOf="@id/marketsense_stock_people_tv"
        app:layout_constraintBottom_toBottomOf="@id/marketsense_stock_people_tv"
        app:layout_constraintStart_toEndOf="@id/marketsense_stock_people_tv"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ImageView
        android:id="@+id/marketsense_stock_news_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_bar3_green"
        android:contentDescription="@string/title_company_predict_news_title"
        android:scaleX="0.8"
        app:layout_constraintTop_toTopOf="@id/marketsense_stock_news_tv"
        app:layout_constraintBottom_toBottomOf="@id/marketsense_stock_news_tv"
        app:layout_constraintStart_toEndOf="@id/marketsense_stock_news_tv"
        app:layout_constraintEnd_toEndOf="parent"
        />

</android.support.constraint.ConstraintLayout>