<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/alert_dialog_text_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:text="@string/title_hyperlink_title"
        android:textColor="@color/marketsense_text_black"
        android:textSize="18sp"
        android:fontFamily="Roboto-Regular"
        android:textStyle="normal"
        android:lineSpacingExtra="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/alert_dialog_input_1"
        android:layout_marginTop="5dp"
        android:inputType="text"
        android:singleLine="true"
        android:hint="@string/hint_input_hyperlink_title"
        app:layout_constraintTop_toBottomOf="@id/alert_dialog_text_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/alert_dialog_text_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:text="@string/title_hyperlink_url"
        android:textColor="@color/marketsense_text_black"
        android:textSize="18sp"
        android:fontFamily="Roboto-Regular"
        android:textStyle="normal"
        android:lineSpacingExtra="4dp"
        app:layout_constraintTop_toBottomOf="@id/alert_dialog_input_1"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/alert_dialog_input_2"
        android:layout_marginTop="5dp"
        android:inputType="textUri"
        android:singleLine="true"
        android:hint="@string/hint_input_hyperlink_url"
        app:layout_constraintTop_toBottomOf="@id/alert_dialog_text_2"
        app:layout_constraintStart_toStartOf="parent"
        />

</android.support.constraint.ConstraintLayout>