<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="56dp" >

    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/action_bar_avatar"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_centerVertical="true"
        app:placeholderImage="@drawable/ic_account_circle_white_24px"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/user_avatar" />

    <Button
        android:id="@+id/btn_left"
        android:layout_width="111dp"
        android:layout_height="24dp"
        android:background="@drawable/btn_oval_left_white"
        android:text="@string/title_action_bar_market"
        android:textColor="@color/text_black"
        android:stateListAnimator="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_right"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_right"
        android:layout_width="111dp"
        android:layout_height="24dp"
        android:background="@drawable/btn_oval_right_black"
        android:text="@string/title_action_bar_choice"
        android:textColor="@color/text_white"
        android:stateListAnimator="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_left"/>

    <TextView
        android:id="@+id/action_bar_name"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="@color/marketsense_text_white"
        android:textSize="20sp"
        android:fontFamily="Roboto-Regular"
        android:textStyle="normal"
        android:text="@string/app_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/search_edit_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/btn_oval_small_corner_white"
        android:singleLine="true"
        android:text="@string/title_search_hint_stock"
        android:textColorHint="@color/marketsense_text_gray"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:drawableStart="@drawable/ic_search_gray_24px"
        android:drawablePadding="2dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="14sp"
        android:letterSpacing="0.04"
        android:fontFamily="Roboto-Regular"
        android:textStyle="normal"
        android:textColor="@color/text_gray"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center_vertical"
        app:layout_constraintStart_toEndOf="@id/action_bar_avatar"
        app:layout_constraintEnd_toStartOf="@id/action_bar_search"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:id="@+id/action_bar_search"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_centerVertical="true"
        android:visibility="visible"
        app:srcCompat="@drawable/ic_search_white_24px"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/title_action_bar_search" />

</android.support.constraint.ConstraintLayout>