<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/trend_red"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/stock_price_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:fontFamily="sans-serif"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/title_unavailable_price"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="13dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/stock_diff_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:fontFamily="sans-serif"
        android:textStyle="normal"
        android:textColor="@color/white"
        android:text="@string/title_unavailable_score_double"
        android:drawableStart="@mipmap/ic_trend_arrow_up_white"
        android:drawablePadding="6dp"
        android:layout_marginStart="18dp"
        app:layout_constraintTop_toTopOf="@id/stock_price_tv"
        app:layout_constraintStart_toEndOf="@id/stock_price_tv"
        app:layout_constraintBottom_toBottomOf="@id/stock_price_tv"/>

    <TextView
        android:id="@+id/stock_trade_now_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="7dp"
        android:textSize="12sp"
        android:fontFamily="sans-serif"
        android:textColor="@color/white"
        android:text="@string/title_trade_now"
        android:background="@drawable/btn_oval_small_corner_yellow"
        android:paddingStart="8dp"
        android:paddingEnd="7dp"
        android:paddingTop="1dp"
        android:paddingBottom="1dp"
        app:layout_constraintTop_toTopOf="@id/stock_diff_tv"
        app:layout_constraintBottom_toBottomOf="@id/stock_diff_tv"
        app:layout_constraintEnd_toStartOf="@id/stock_time_tv"/>

    <TextView
        android:id="@+id/stock_time_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:textSize="14sp"
        android:fontFamily="sans-serif"
        android:textColor="@color/white"
        android:text="@string/title_unavailable_time"
        app:layout_constraintTop_toTopOf="@id/stock_diff_tv"
        app:layout_constraintBottom_toBottomOf="@id/stock_diff_tv"
        app:layout_constraintEnd_toEndOf="parent"/>

</android.support.constraint.ConstraintLayout>