<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/rank_iv"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@mipmap/ic_direction_up"
        android:contentDescription="@string/title_company_predict_people_title"
        android:layout_marginEnd="14dp"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintTop_toTopOf="@id/rank_name_tv"
        app:layout_constraintBottom_toBottomOf="@id/rank_price_tv"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.45"/>

    <TextView
        android:id="@+id/rank_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:fontFamily="Roboto-Regular"
        android:textColor="@color/text_black"
        android:text="@string/title_company_name"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline" />

    <TextView
        android:id="@+id/rank_price_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:fontFamily="Roboto-Regular"
        android:textColor="@color/text_gray"
        android:text="@string/title_company_price"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/rank_name_tv"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>